# dataiku-mlops

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
dataiku-mlops/: deploy.py
dataiku_mlops/: client.py  deploy.py  dssclient.py  foo.py  rollback.py  utils.py
tests/: conftest.py  test_client.py  test_deploy.py  test_dssclient.py  test_foo.py  test_rollback.py
